--- a/src/app/ejercicios/ejercicios.page.html
+++ b/src/app/ejercicios/ejercicios.page.html
@@ -6,7 +6,7 @@
 <ion-content>
   <ion-grid [fixed]="true">
     <ion-row>
-      <ion-col size="10">
+      <ion-col size="12">
         <ion-card>
           <ion-fab slot="" vertical="center" horizontal="start" [edge]="true">
             <ion-fab-button>
@@ -37,15 +37,23 @@
 
       </ion-col>
 
-      <ion-col size="6">
+      <ion-col size="12">
         <ion-card>
           <h1>Tortuga</h1>
-          <img alt="brown sea turtle in water"
-            src="https://images.unsplash.com/photo-1573551089778-46a7abc39d9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" />
+          <img alt="rhino standing near grass"
+            src="https://images.unsplash.com/flagged/photo-1556983257-71fddc36bc75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80" />
+
         </ion-card>
       </ion-col>
 
-      <ion-col size="12">12</ion-col>
+      <ion-col size="12">
+        <ion-card>
+          <h1>Tortuga</h1>
+          <img alt="rhino standing near grass"
+            src="https://images.unsplash.com/flagged/photo-1556983257-71fddc36bc75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80" />
+
+        </ion-card>
+      </ion-col>
       <ion-col size="4">
         first 1</ion-col>
       <ion-col size="4">Second 2</ion-col>
