--- a/src/global.scss
+++ b/src/global.scss
@@ -56,3 +56,28 @@ calendar-content {
     bottom: 20px;
     right: 20px;
   }
+
+  ion-toolbar {
+    background-color: #3f90ee;
+  }
+  
+
+  ion-title {
+    color: #ffffff; // Título rosa claro
+  }
+  
+  ion-grid {
+    background-color: #ffffff; // Fondo blanco
+  }
+  
+  ion-col {
+    background-color: #ffffff; // Fondo blanco
+  }
+  
+  ion-card {
+    background-color: #ffffff; // Fondo blanco
+  }
+
+  h1 {
+    color: #000000; // Color de texto negro
+  }
