--- a/src/app/ejercicios/ejercicios.page.html
+++ b/src/app/ejercicios/ejercicios.page.html
@@ -1,36 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Header</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button default-href="#"></ion-back-button>
+    </ion-buttons>
+    <ion-title><h2>Calendario De Eventos</h2></ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <ion-grid [fixed]="true">
     <ion-row>
-      <ion-col size="12">
+      <ion-col size="12" >
         <ion-card>
-          <ion-fab slot="" vertical="center" horizontal="start" [edge]="true">
-            <ion-fab-button>
-              <ion-icon name="add"></ion-icon>
-            </ion-fab-button>
+          
+          <h1>Calendario escolar ENE-JUL 2024</h1>
+          <img alt="rhino standing near grass"
+            src="/assets/imagenes/calendario.jpg" />
             
-            <ion-fab-list  side="end">
-              <ion-fab-button>
-                <ion-icon name="help-circle" id="ayuda"></ion-icon>
-                <ion-alert trigger="ayuda" message="Esto es un anuncio de información"></ion-alert>
-              </ion-fab-button>
-              <ion-fab-button>
-                <ion-icon name="home" [routerLink]="['/main']"></ion-icon>
-              </ion-fab-button>
-              <ion-fab-button>
-                <ion-icon name="document" [routerLink]="['/register']"></ion-icon>
-              </ion-fab-button>
-            </ion-fab-list>
-          </ion-fab>
-           
-          <br><br>
-          <h1>Rhinoceronte </h1>
-          <img alt="rhino standing near grass"
-            src="https://images.unsplash.com/flagged/photo-1556983257-71fddc36bc75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80" />
 
 
         </ion-card>
@@ -39,29 +25,87 @@
 
       <ion-col size="12">
         <ion-card>
-          <h1>Tortuga</h1>
+          <h1>ENERO</h1>
           <img alt="rhino standing near grass"
-            src="https://images.unsplash.com/flagged/photo-1556983257-71fddc36bc75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80" />
+            src="/assets/imagenes/enero.jpg" style="width: 600px; height: auto;" />
 
         </ion-card>
       </ion-col>
 
       <ion-col size="12">
         <ion-card>
-          <h1>Tortuga</h1>
+          <h1>FEBRERO</h1>
           <img alt="rhino standing near grass"
-            src="https://images.unsplash.com/flagged/photo-1556983257-71fddc36bc75?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80" />
+            src="/assets/imagenes/febrero.jpg" style="width: 600px; height: auto;"/>
 
         </ion-card>
       </ion-col>
-      <ion-col size="4">
-        first 1</ion-col>
-      <ion-col size="4">Second 2</ion-col>
-      <ion-col size="4">T 3</ion-col>
+      
+      <ion-col size="12">
+        <ion-card>
+          <h1>MARZO</h1>
+          <img alt="rhino standing near grass"
+            src="/assets/imagenes/marzo.jpg" style="width: 600px; height: auto;"/>
+  
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="12">
+        <ion-card>
+          <h1>ABRIL</h1>
+          <img alt="rhino standing near grass"
+            src="/assets/imagenes/abril.jpg" style="width: 600px; height: auto;"/>
+  
+        </ion-card>
+      </ion-col>
+      <ion-col size="12">
+        <ion-card>
+          <h1>MAYO</h1>
+          <img alt="rhino standing near grass"
+            src="/assets/imagenes/mayo.jpg" style="width: 600px; height: auto;"/>
+  
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="12">
+        <ion-card>
+          <h1>JUNIO</h1>
+          <img alt="rhino standing near grass"
+            src="/assets/imagenes/junio.jpg" style="width: 600px; height: auto;"/>
+  
+        </ion-card>
+      </ion-col>
+
+      <ion-col size="12">
+        <ion-card>
+          <h1>JULIO</h1>
+          <img alt="rhino standing near grass"
+            src="/assets/imagenes/julio.jpg" style="width: 600px; height: auto;"/>
+  
+        </ion-card>
+      </ion-col>
 
     </ion-row>
    
   </ion-grid>
+   
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button>
+        <ion-icon name="help-circle" id="ayuda"></ion-icon>
+        <ion-alert trigger="ayuda" message="PROXIMAMENTE MAS CONTENIDO...."></ion-alert>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="home" [routerLink]="['/main']"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="document" [routerLink]="['/login']"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 
 
 </ion-content>
