--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,23 +1,16 @@
-<ion-header [translucent]="true" class="calendar-header">
+<ion-header>
   <ion-toolbar>
     <ion-title>Calendar</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <!--<ion-title size="large">main</ion-title> 
-      <a href="">Login</a> -->
-    </ion-toolbar>
-  </ion-header>
-  <ion-footer class="calendar-footer">
-    <ion-card-content>
-    <ion-grid>
-      <ion-datetime locale="es-ES">
-        <span slot="time-label">Time</span>
-      </ion-datetime>
-    </ion-grid>
-    </ion-card-content>
-  </ion-footer>
+<ion-content>
+  <ion-segment>
+    <ion-segment-button value="schedule">Schuedule</ion-segment-button>
+    <ion-segment-button value="task">Task</ion-segment-button>
+    <ion-segment-button value="notes">Notes</ion-segment-button>
+    
+  </ion-segment>
+  <ion-datetime presentation="date" value="2024-01-01" [highlightedDates]="highlightedDates"></ion-datetime>
 </ion-content>
+
