--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -11,6 +11,19 @@
     <ion-segment-button value="notes">Notes</ion-segment-button>
     
   </ion-segment>
+  
   <ion-datetime presentation="date" value="2024-01-01" [highlightedDates]="highlightedDates"></ion-datetime>
+  <br>
+  <ion-datetime presentation="date" value="2024-02-01" [highlightedDates]="highlightedDates"></ion-datetime>
+  <br>
+  <ion-datetime presentation="date" value="2024-03-01" [highlightedDates]="highlightedDates"></ion-datetime>
+  <br>
+  <ion-datetime presentation="date" value="2024-04-01" [highlightedDates]="highlightedDates"></ion-datetime>
+  <br>
+  <ion-datetime presentation="date" value="2024-05-01" [highlightedDates]="highlightedDates"></ion-datetime>
+  <br>
+  <ion-datetime presentation="date" value="2024-06-01" [highlightedDates]="highlightedDates"></ion-datetime>
 </ion-content>
+
+
 
