--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,11 +18,14 @@
   }
 </ion-list>
 <ion-card>
-  <ion-label>
-    NAME
-  </ion-label>
-  <ion-input type="text">
+  <ion-item>
+    <ion-label> Numero de control </ion-label>
 
-  </ion-input>
-</ion-card>
+    <ion-input type="text" [(ngModel)]="newUser.NoControl">
+    
+    </ion-input>
+  </ion-card>
+  </ion-item>
+ 
+  
 </ion-content>
