--- a/src/app/password/password.page.html
+++ b/src/app/password/password.page.html
@@ -1,16 +1,27 @@
-<ion-content [fullscreen]="true">
+<ion-content >
+
   <ion-card>
-    <ion-card-header>
-      <ion-img src="/assets/imagenes/icono.png" style="width: 100px; height: auto;"></ion-img>
-      <ion-card-title>Login</ion-card-title>
-      <ion-card-subtitle>Registra tu contraseña</ion-card-subtitle>
-    </ion-card-header>
+
     
-    <ion-card-content>
-      <ion-input type="password" placeholder="Teclea tu password"></ion-input>
-      <ion-button>Continuar</ion-button>
-    </ion-card-content>
-  
+    <div>
+      <ion-button  [routerLink]="['/login']">Volver</ion-button>
+    </div>
+
     
+      <ion-card-content>
+        <ion-card-title>¿Olvidaste tu contraseña?</ion-card-title>
+        <div class="logo">
+          <img src="assets/imagenes/icono.png">
+        </div>
+        
+        <ion-label>Ingrese su correo</ion-label>
+        <br>
+        <br>
+        <ion-input [(ngModel)]="email" type="email" placeholder="correo@mail.com" required></ion-input>
+        <ion-button expand="block" (click)="resetPassword()">Enviar</ion-button>
+      </ion-card-content>
+   
+
   </ion-card>
+
 </ion-content>
