--- a/src/app/lista-tarea/lista-tarea.page.html
+++ b/src/app/lista-tarea/lista-tarea.page.html
@@ -1,13 +1,41 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Things to do</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Lista de Notas</ion-title>
+     
+    <ion-fab vertical="center" horizontal="left">
+      <ion-fab-button size="small" [routerLink]="['/home']">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-segment>
-    <ion-segment-button value="Schedule">All</ion-segment-button>
-    <ion-segment-button value="Tasks">Done</ion-segment-button>
-    <ion-segment-button value="Notes">To do</ion-segment-button>
-  </ion-segment>
+  <div *ngIf="userEmail; else notLoggedIn">
+    
+    <ion-list>
+      <ion-item *ngFor="let user of tareas; trackBy: trackByFn">
+        <ion-label>
+          <p>Título: {{ user.titulo }}</p>
+          <p>Detalles: {{ user.detalles }}</p>
+          <p>Fecha Inicial: {{ user.fechaI }}</p>
+          <p>Fecha Final: {{ user.fechaF }}</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+    
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+      <ion-fab-button [routerLink]="['/notes']">
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </div>
+  
+  <ng-template #notLoggedIn>
+    <ion-item>
+      <ion-label color="danger">
+        Inicia sesión antes de crear una nota
+      </ion-label>
+    </ion-item>
+  </ng-template>
 </ion-content>
