--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,17 +1,40 @@
 <ion-content [fullscreen]="true">
+
   <ion-card>
+    <div>
+      <ion-button  [routerLink]="['/home']">Volver</ion-button>
+    </div>
+
     <ion-card-header>
-      <ion-img src="/assets/imagenes/icono.png" style="width: 100px; height: auto;"></ion-img>
-      <ion-card-title>Login</ion-card-title>
-      <ion-card-subtitle>Registra tu correo</ion-card-subtitle>
+      <div class="logo">
+        <img src="assets/imagenes/icono.png">
+      </div>
+
+      <div class="flex-center">
+        <ion-card-title>Iniciar sesión</ion-card-title>
+      </div>
+
     </ion-card-header>
-    
-    <ion-card-content>
-      <ion-input type="email" placeholder="Micorreo@gmail.com" required></ion-input>
-      <ion-button [routerLink]="['/password']">Continuar</ion-button>
-      <ion-buttons slot="end">
-        <ion-button [routerLink]="['/register']">¿No cuentas con una cuenta?</ion-button>
-      </ion-buttons>
-    </ion-card-content>
+
+    <div>
+      <ion-card-content>
+        <ion-label>Ingrese su correo</ion-label>
+        <ion-input [(ngModel)]="email" type="email" placeholder="correo@mail.com" required> </ion-input>
+        <ion-input [(ngModel)]="password" type="password" placeholder="**********" required> </ion-input>
+        <ion-button   id="present-alert" expand="full" (click)="login()">Siguiente</ion-button>
+        <p *ngIf="error">{{ "No se reconoce correo o contraseña" }}</p>
+      </ion-card-content>
+
+    </div>
+
   </ion-card>
+<ion-card-content>
+  <ion-label>¿No cuentas con una cuenta? </ion-label>
+  <a [routerLink]="['/register']"> Registrate</a>
+  <br>
+  <br>
+  <ion-label>¿Olvidaste tu contraseña? </ion-label>
+  <a [routerLink]="['/password']"> Clic aqui</a>
+</ion-card-content>
+
 </ion-content>
