--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,46 +1,42 @@
 <div class="wrapper">
-  <ion-menu contentId="main-content" side="start">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu Content</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">This is the menu content.</ion-content>
-  </ion-menu>
-  
   <ion-header [translucent]="true">
     <ion-toolbar>
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-  
+
       <div class="logo-container" slot="start">
-        <img src="../assets/img/logo_transparent.png" class="logo">
+        <img src="../assets/img/logo_transparent.png" class="logo" />
       </div>
-  
     </ion-toolbar>
   </ion-header>
-  
-  <ion-content class="ion-padding" id="main-content">
-    <p>Tap the button in the toolbar to open the menu.</p>
-  </ion-content>
 
-
-<!--contenido principal de la pagina-->
+  <!--contenido principal de la pagina-->
 
   <ion-content [fullscreen]="true">
     <ion-grid>
+
       <ion-row>
-        
+        <ion-col>
+          <h2>Today's events</h2>
+        </ion-col>
+        <ion-col>
+          <ion-toolbar>
+            <ion-buttons [collapse]="true" slot="start">
+              <ion-button>More!</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-col>
+      </ion-row>
+      
+      <ion-row>
         <ion-col>
           <ion-card>
             <ion-card-header>
               <ion-card-title>Card Title</ion-card-title>
               <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
             </ion-card-header>
-            <ion-card-content>
-            
-            </ion-card-content>
+            <ion-card-content> </ion-card-content>
           </ion-card>
         </ion-col>
 
@@ -50,43 +46,55 @@
               <ion-card-title>Card Title</ion-card-title>
               <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
             </ion-card-header>
-          
-            <ion-card-content>
-            
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
 
-        <ion-col>
-          <ion-card>
-            <ion-card-header>
-              <ion-card-title>Card Title</ion-card-title>
-              <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-            </ion-card-header>
-          
-            <ion-card-content>
-            
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-
-        <ion-col>
-          <ion-card>
-            <ion-card-header>
-              <ion-card-title>Card Title</ion-card-title>
-              <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-            </ion-card-header>
-          
-            <ion-card-content>
-            
-            </ion-card-content>
+            <ion-card-content> </ion-card-content>
           </ion-card>
         </ion-col>
       </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-toolbar>
+            <ion-buttons [collapse]="true" slot="start">
+              <ion-button>Calendar of the week</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-card>
+            <ion-card-header>
+              <ion-card-title>Card Title</ion-card-title>
+              <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+            </ion-card-header>
+            <ion-card-content> </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+
     </ion-grid>
-  
   </ion-content>
 </div>
 
-
-
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home">
+      <ion-icon [routerLink]="['/#']" name="home-outline"></ion-icon>
+      home
+    </ion-tab-button>
+    <ion-tab-button tab="Calendar">
+      <ion-icon [routerLink]="['/prueba-c']" name="calendar-outline"></ion-icon>
+      Calendar
+    </ion-tab-button>
+    <ion-tab-button tab="Grades">
+      <ion-icon [routerLink]="['/things-td']" name="book-outline"></ion-icon>
+      Grades
+    </ion-tab-button>
+    <ion-tab-button tab="User">
+      <ion-icon name="person-outline"></ion-icon>
+      User
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
