--- a/src/app/notes/notes.page.html
+++ b/src/app/notes/notes.page.html
@@ -40,7 +40,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-button expand="block" id="present-alert" [routerLink]="['/lista-tarea']" (click)="save()" >Agregar Nota</ion-button>
+  <ion-button expand="block" id="present-alert" [routerLink]="['/calendario']" (click)="save()" >Agregar Nota</ion-button>
   <ion-alert trigger="present-alert" message="Nota agregada" ></ion-alert>
 
   
