--- a/src/app/password/password.page.scss
+++ b/src/app/password/password.page.scss
@@ -13,8 +13,8 @@
   
   /* Estilo para el ion-card */
   ion-card {
-    background-color: #ffffff; /* Color de fondo blanco */
-    color: #000000; /* Color de texto negro */
+    background-color: #000000; /* Color de fondo blanco */
+    color: #ffffff; /* Color de texto negro */
     padding: 20px; /* Ajusta el padding según sea necesario */
   }
   
