--- a/src/app/calendario/calendario.page.html
+++ b/src/app/calendario/calendario.page.html
@@ -12,65 +12,59 @@
   <ion-grid>
     <ion-row>
       
-      <ion-col> <ion-datetime size="auto" presentation="date" value="2024-01" [highlightedDates]="highlightedDates" ></ion-datetime></ion-col>
-      <ion-col> <ion-datetime size="auto" presentation="date" value="2024-02" [highlightedDates]="highlightedDates"></ion-datetime></ion-col>
-      <ion-col> <ion-datetime size="auto" presentation="date" value="2024-03" [highlightedDates]="highlightedDates"></ion-datetime></ion-col>
-      <ion-col><ion-datetime size="auto" presentation="date" value="2024-04" [highlightedDates]="highlightedDates"></ion-datetime></ion-col>
-
+      <ion-col> <ion-datetime size="auto" presentation="date" value="2024-05" [highlightedDates]="highlightedDates" (ionChange)="onDateChange($event)"></ion-datetime></ion-col>
+  
     </ion-row>
 
     <ion-row>
-      <ion-col><ion-datetime size="auto" presentation="date" value="2024-05" [highlightedDates]="highlightedDates"></ion-datetime></ion-col>
-      <ion-col><ion-datetime size="auto" presentation="date" value="2024-06" [highlightedDates]="highlightedDates"></ion-datetime></ion-col> 
-      <ion-col><ion-datetime size="auto" presentation="date" value="2024-07" [highlightedDates]="highlightedDates"></ion-datetime></ion-col>
       <ion-col>
 
         <ion-card >
           <ion-list color="light">
 
             <ion-item class="Reinscript" >
-              <ion-icon color="GreenYellow" slot="start" name="chevron-up-outline" size="large"></ion-icon>
+              <ion-icon color="GreenYellow" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Reinscripciones</ion-label>
             </ion-item>
 
             <ion-item class="Inicioclass" >
-              <ion-icon color="Lime" slot="start" name="caret-forward-outline" size="large"></ion-icon>
+              <ion-icon color="Lime" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Inicio de Clases</ion-label>
             </ion-item>
 
             <ion-item  class="ReinscripTardias">
-              <ion-icon color="Crimson" slot="start" name="chevron-down-outline" size="large"></ion-icon>
+              <ion-icon color="Crimson" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Reinscripciones tardias</ion-label>
             </ion-item>
 
             <ion-item class="SuspensionIn" >
-              <ion-icon color="DarkGray" slot="start" name="ellipse-outline" size="large"></ion-icon>
+              <ion-icon color="DarkGray" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Suspensión/Día inhabil</ion-label>
             </ion-item>
 
             <ion-item class="BajasM">
-              <ion-icon color="DarkOrange" slot="start" name="chevron-down-circle-outline" size="large"></ion-icon>
+              <ion-icon color="DarkOrange" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Bajas de materias</ion-label>
             </ion-item>
 
             <ion-item class="CeremoniaE">
-              <ion-icon color="SeaGreen" slot="start" name="star-outline" size="large"></ion-icon>
+              <ion-icon color="SeaGreen" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Ceremonia de Egresados</ion-label>
             </ion-item>
 
             <ion-item class="Finclases">
-              <ion-icon color="DarkCyan" slot="start" name="caret-back-outline" size="large"></ion-icon>
+              <ion-icon color="DarkCyan" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Fin de clases</ion-label>
             </ion-item>
 
             
             <ion-item class="Cursoverano">
-              <ion-icon color="BlueViolet" slot="start" name="book-outline" size="large"></ion-icon>
+              <ion-icon color="BlueViolet" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Cursos de Verano</ion-label>
             </ion-item>
 
             <ion-item class="Vac">
-              <ion-icon color="Magenta" slot="start" name="rocket-outline" size="large"></ion-icon>
+              <ion-icon color="Magenta" slot="start" name="radio-button-on" size="large"></ion-icon>
               <ion-label>Vacaciones</ion-label>
             </ion-item>
 
