--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,64 +1,68 @@
-<div class="wrapper">
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start" [routerLink]="['/lista-tarea']">
+    </ion-buttons>
+    <ion-title class="custom-title">Agenda Escolar</ion-title>
+  </ion-toolbar>
+</ion-header>
   <!--contenido principal de la pagina-->
 
   <ion-content [fullscreen]="true">
+    <br>
+    <br>
+    <br>
     <ion-grid>
-
       <ion-row>
-        <ion-col>
-          <h2>Agenda Escolar</h2>
-        </ion-col>
-      </ion-row>
-      
-      <ion-row>
-        <ion-col>
+        <ion-col offset="0" offset-md="4" offset-lg="2">
           <ion-card color="primary">
             <ion-card-header>
-              <ion-card-title>Actividad 1</ion-card-title>
-              <ion-card-subtitle>Actividades para hoy</ion-card-subtitle>
+              <ion-card-title class="custom-card-header-title">Actividades para hoy</ion-card-title>
+              <ion-card-subtitle class="custom-card-header-subtitle">Actividad 1</ion-card-subtitle>
             </ion-card-header>
-            <ion-card-content> </ion-card-content>
+            <ion-card-content class="custom-card-content">
+              <!-- Content for the card goes here -->
+            </ion-card-content>
           </ion-card>
         </ion-col>
 
-        <ion-col>
+        <ion-col offset="5" offset-md="" offset-lg="2">
           <ion-card color="tertiary">
             <ion-card-header>
-              <ion-card-title>Semana del estudiante</ion-card-title>
-              <ion-card-subtitle>Eventos</ion-card-subtitle>
+              <ion-card-title class="custom-card-header-title">Eventos</ion-card-title>
+              <ion-card-subtitle class="custom-card-header-subtitle">Semana del estudiante</ion-card-subtitle>
             </ion-card-header>
-
-            <ion-card-content> </ion-card-content>
+            <ion-card-content class="custom-card-content">
+              <!-- Content for the card goes here -->
+            </ion-card-content>
           </ion-card>
         </ion-col>
       </ion-row>
 
-      <ion-row>
-        <ion-col>
-          <ion-card>
-            <ion-card-header color="success">
-              <ion-card-title>* Resumen... <p>
-                * Investigacion... <p></p>
-              * Proyecto de... </ion-card-title>
-              <ion-card-subtitle>Trabajos de la semana</ion-card-subtitle>
-            </ion-card-header>
-            <ion-card-content> </ion-card-content>
-          </ion-card>
-        </ion-col>
-      </ion-row>
-
+      <ion-col offset="0" offset-md="4" offset-lg="2">
+        <ion-card>
+          <ion-card-header color="success">
+            <ion-card-title class="custom-card-header-title">Trabajos de la semana</ion-card-title>
+            <ion-card-subtitle class="custom-card-header-subtitle">Eventos y Tareas</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content class="custom-card-content">
+            <!-- Content for the card goes here -->
+          </ion-card-content>
+          <ion-list lines="inset">
+            <ion-item color="success" class="custom-list-item">
+              <ion-label>*Proyecto final....</ion-label>
+            </ion-item>
+            <ion-item color="success" class="custom-list-item">
+              <ion-label>*Avances de proyt...</ion-label>
+            </ion-item>
+            <ion-item color="success" class="custom-list-item">
+              <ion-label>*Reporte...</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-card>
+      </ion-col>
     </ion-grid>
   </ion-content>
-</div>
-
+  
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="Calendar">
