--- a/src/app/notes/notes.page.html
+++ b/src/app/notes/notes.page.html
@@ -1,47 +1,36 @@
 <ion-header>
-  
   <ion-toolbar color="primary">
-    <ion-title>Crear nota</ion-title>
-    
-    <ion-fab  vertical="center" horizontal="left">
-      <ion-fab-button size="small" [routerLink]="['/lista-tarea']">
-        <ion-icon name="arrow-back-circle-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab><br><br>
+    <ion-buttons slot="start" [routerLink]="['/lista-tarea']">
+      <ion-icon slot="start" name="chevron-back-outline" size="large"></ion-icon>
+    </ion-buttons>
+    <ion-title>Lista de tareas</ion-title>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content>
   <br>
   <ion-list>
-    <ion-item color="dark">
-      <ion-input type="text" [(ngModel)] = "newUser.titulo" type="text" placeholder="Título de la nota"></ion-input>
+    <ion-item color="dark" class="custom-font-size">
+      <ion-input type="text" [(ngModel)]="newUser.titulo" placeholder="Título de la nota"></ion-input>
     </ion-item>
 
-    <ion-item color="primary">
-   
-
-      <ion-label>Fecha inicial:</ion-label>
-      <ion-datetime  presentation="date-time" [preferWheel]="true" [(ngModel)] = "newUser.fechaI" color="primary" display-format="DD/MM/YYYY" ></ion-datetime>
-      
+    <ion-item color="primary" class="custom-font-size">
+      <ion-label class="custom-label-size">Fecha inicial:</ion-label>
+      <ion-datetime presentation="date-time" [preferWheel]="true" [(ngModel)]="newUser.fechaI" color="primary" display-format="DD/MM/YYYY"></ion-datetime>
     </ion-item>
     <br>
 
-    <ion-item color="primary">
-      <ion-label>Fecha final:</ion-label>
-      <ion-datetime presentation="date-time" [preferWheel]="true"[(ngModel)] = "newUser.fechaF" color="primary" display-format="DD/MM/YYYY" ></ion-datetime>
+    <ion-item color="primary" class="custom-font-size">
+      <ion-label class="custom-label-size">Fecha final:</ion-label>
+      <ion-datetime presentation="date-time" [preferWheel]="true" [(ngModel)]="newUser.fechaF" color="primary" display-format="DD/MM/YYYY"></ion-datetime>
     </ion-item>
 
-  
-    <ion-item  color="dark">
-      <ion-label position="stacked">Detalles</ion-label>
-      <ion-textarea [(ngModel)] = "newUser.detalles" rows="4" placeholder="Escriba los detalles"></ion-textarea>
+    <ion-item color="dark" class="custom-font-size">
+      <ion-label position="stacked" class="custom-label-size">Detalles</ion-label>
+      <ion-textarea [(ngModel)]="newUser.detalles" rows="4" placeholder="Escriba los detalles"></ion-textarea>
     </ion-item>
   </ion-list>
 
-  <ion-button expand="block" id="present-alert" [routerLink]="['/calendario']" (click)="save()" >Agregar Nota</ion-button>
-  <ion-alert trigger="present-alert" message="Nota agregada" ></ion-alert>
-
-  
+  <ion-button expand="block" id="present-alert" [routerLink]="['/calendario']" (click)="save()">Agregar Nota</ion-button>
+  <ion-alert trigger="present-alert" message="Nota agregada"></ion-alert>
 </ion-content>
