--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,3 @@
-
-
 ion-content {
   flex: 1; /* Ocupa todo el espacio disponible */
   background: #fff;
@@ -20,3 +18,32 @@ ion-button{
   border-radius: 50%;
   background-color: #ffffff;
 }
+
+.custom-card-content {
+  font-size: 18px; /* Adjust the size as needed */
+}
+
+.custom-list-item {
+  font-size: 18px; /* Adjust the size as needed */
+}
+
+.custom-card-header-title {
+  font-size: 20px; /* Adjust the size as needed */
+}
+
+.custom-card-header-subtitle {
+  font-size: 18px; /* Adjust the size as needed */
+}
+
+.custom-card-content {
+  font-size: 18px; /* Adjust the size as needed */
+}
+
+.custom-list-item {
+  font-size: 18px; /* Adjust the size as needed */
+}
+
+.custom-title {
+  font-size: 24px; /* Adjust the size as needed */
+}
+
